codex-rs/tui/src/app/snapshots/codex_tui__app__owned_transcript__follow_tests__running_follow_control.snap
---
source: tui/src/app/owned_transcript_follow_tests.rs
expression: "crate::chatwidget::tests::helpers::normalize_snapshot_paths(super::tests::buffer_text(buffer))"
---
transcript row 26
transcript row 27
transcript row 28

 . Crystallizing (0s • esc to interrupt)

                             ↓ Back to bottom · esc

› draft stays here

  GPT-5.6-Sol default · /tmp/project
  tab to queue message
